--- a/src/layout/MainNavigation.module.css
+++ b/src/layout/MainNavigation.module.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Antonio:wght@100&display=swap");
+
 * {
     margin: 0;
     padding: 0;
@@ -24,6 +26,7 @@ body {
     overflow-x: hidden;
 }
 .navigation.active {
+    z-index: 1;
     width: 300px;
     transition: width 0.5s;
 }
@@ -114,6 +117,7 @@ body {
     height: 60px;
     line-height: 58px;
     white-space: normal;
+    font-family: "Antonio", sans-serif;
 }
 .toggle {
     position: fixed;
@@ -128,6 +132,7 @@ body {
     justify-content: center;
     align-items: center;
     transition: 0.2s;
+    z-index: 1;
 }
 
 .toggle.active {
