--- a/src/pages/Help.css
+++ b/src/pages/Help.css
@@ -1,10 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Open+Sans+Condensed:wght@300&display=swap");
+
 .home-body {
     /* background: #333; */
     background: rgb(250, 252, 252);
     margin: 5px 0 0 99px;
     min-height: 100vh;
     padding: 20px;
-    overflow: hidden;
 }
 .help-title {
     width: 90%;
@@ -14,8 +15,7 @@
 
 .help-title h2 {
     font-size: 30px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-family: "Open Sans Condensed", sans-serif;
     color: #4d5bf9;
     padding-top: 5px;
 }
@@ -108,7 +108,7 @@ footer h4 {
     font-size: 20px;
     margin-top: 10px;
     color: #071c41;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Comfortaa", cursive;
 }
 footer p {
     color: #fff;
@@ -146,7 +146,7 @@ footer .wave {
     left: 0;
     width: 100%;
     height: 100px;
-    background: url("C:\Users\user\Documents\Source Codes\Javascript Tools\React\Hands-on Projects\video-app\src\images\wave.png");
+    background: url("C:\Users\user\Documents\Source Codes\Javascript Tools\React\Hands-on Projects\myvideo-app\src\images\wave.png");
     /* url(wave.png) */
     background-size: 1000px 100px;
 }
