--- a/src/pages/PlayVideo.css
+++ b/src/pages/PlayVideo.css
@@ -1,10 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Source+Sans+Pro:wght@200&family=Zilla+Slab:wght@300&display=swap");
+
 .home-body {
     /* background: #333; */
     background: rgb(250, 252, 252);
     margin: 5px 0 0 99px;
     min-height: 100vh;
     padding: 20px;
-    overflow: hidden;
 }
 
 .back-arrow {
@@ -44,8 +45,8 @@
     display: inline-block;
 }
 .video-player-title {
-    width: 80%;
-    font-family: Georgia, "Times New Roman", Times, serif;
+    width: 79%;
+    font-family: "Cinzel Decorative", cursive;
     font-size: 3rem;
     color: #077177;
     margin-top: -0.3rem;
@@ -53,6 +54,7 @@
     float: left;
 }
 .video-player-post-button {
+    font-family: "Source Sans Pro", sans-serif;
     padding: 1rem 1rem;
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -70,6 +72,6 @@
 }
 .video-player-info {
     width: 100%;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Zilla Slab", serif;
     color: rgba(0, 0, 0, 0.7);
 }
