--- a/src/pages/Search.css
+++ b/src/pages/Search.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Gowun+Batang&family=Quicksand:wght@300&family=Kodchasan:wght@200&family=Source+Sans+Pro:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Open+Sans+Condensed:wght@300&family=Kodchasan:wght@200&family=Quicksand:wght@300&family=Source+Sans+Pro:wght@300&display=swap");
 
 .home-body {
     /* background: #333; */
@@ -18,16 +18,16 @@
     padding: 5px;
     cursor: pointer;
 }
-.category-page-title {
+.search-title {
     width: 250px;
     margin-left: 10px;
     padding: 10px;
 }
 
-.category-page-title h2 {
+.search-title h2 {
     height: 45px;
     color: #071c41;
-    font-family: "Gowun Batang", serif;
+    font-family: "Open Sans Condensed", sans-serif;
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
@@ -39,6 +39,23 @@
     border-top-right-radius: 20px;
     margin-left: 30px;
 }
+.search-video {
+    display: block;
+    margin-top: 20px;
+    height: inherit;
+    background-color: #f6f6fa;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    padding: 1.5rem;
+    width: 100%;
+}
+.search-video p {
+    margin-left: 450px;
+    margin-top: 10px;
+    font-size: 20px;
+    font-family: "Kodchasan", sans-serif;
+}
 .category-videos {
     display: block;
     margin-top: 20px;
@@ -49,6 +66,11 @@
     border-radius: 10px;
     padding: 1.5rem;
     width: 100%;
+}
+.category-videos p {
+    margin-left: 450px;
+    margin-top: 10px;
+    font-size: 20px;
 }
 .category-container {
     width: 100%;
@@ -102,10 +124,10 @@
     border-radius: 0.8rem;
     opacity: 0.7;
 }
-.category-post-title {
+.search-post-title {
     font-size: 2.5rem;
     width: 45rem;
-    margin: 3.3rem 0 0;
+    margin: 0 0 0;
     text-transform: uppercase;
     color: #4facfe;
     overflow: hidden;
@@ -113,8 +135,7 @@
     white-space: nowrap;
     font-family: "Quicksand", sans-serif;
 }
-.category-post-description {
-    font-family: "Dosis", sans-serif;
+.search-post-description {
     position: relative;
     top: -0.3rem;
     right: 28rem;
@@ -127,27 +148,8 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    font-family: "Dosis", sans-serif;
 }
-
-.category-post-button {
-    font-family: "Source Sans Pro", sans-serif;
-    margin: 0 0 4.1rem 0;
-    display: inline-block;
-    padding: 1rem 1rem;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    font-size: 1.2rem;
-    color: #fff;
-    background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
-    border-radius: 0.8rem;
-    text-decoration: none;
-    border: none;
-    cursor: pointer;
-}
-.category-post-button:hover {
-    background-image: linear-gradient(to right, #00f2fe 0%, #4facfe 100%);
-}
-
 .category-play-btn {
     width: 0px;
     position: absolute;
