--- a/src/pages/startpage/Startpage.css
+++ b/src/pages/startpage/Startpage.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@500&family=Text+Me+One&family=Zen+Loop&family=Big+Shoulders+Stencil+Display:wght@100&display=swap");
+
 * {
     margin: 0;
     padding: 0;
@@ -69,6 +71,7 @@ form.sign-up-form {
     font-size: 2.2rem;
     color: #444;
     margin-bottom: 10px;
+    font-family: "Cormorant Unicase", serif;
 }
 .input-field {
     max-width: 380px;
@@ -92,64 +95,18 @@ form.sign-up-form {
     color: #333;
     margin-left: 55px;
 }
-.error {
-    max-width: 380px;
-    width: 100%;
-    height: 55px;
-    background-color: #f0f0f0;
-    margin: 10px 0;
-    border-radius: 55px;
-    display: grid;
-    grid-template-columns: 85% 15%;
-    padding: 0 0.4rem;
-    border: 2px solid rgba(252, 2, 2, 0.726);
-}
-.error input {
-    background: none;
-    outline: none;
-    border: none;
-    line-height: 1;
-    font-weight: 600;
-    font-size: 1.1rem;
-    color: #333;
-    margin-left: 55px;
-}
-.success {
-    max-width: 380px;
-    width: 100%;
-    height: 55px;
-    background-color: #f0f0f0;
-    margin: 10px 0;
-    border-radius: 55px;
-    display: grid;
-    grid-template-columns: 85% 15%;
-    padding: 0 0.4rem;
-    border: 2px solid rgb(13, 241, 13);
-}
-.success input {
-    background: none;
-    outline: none;
-    border: none;
-    line-height: 1;
-    font-weight: 600;
-    font-size: 1.1rem;
-    color: #333;
-    margin-left: 55px;
-}
-.msg {
-    color: red;
-    width: 350px;
-    font-size: 0.8rem;
-    margin-left: 1rem;
-}
+
 /* message from server */
 .server-message {
     width: 60%;
-    background-color: rgba(214, 172, 172, 0.596);
-    color: black;
+    background-color: red;
+    color: whitesmoke;
     font-size: 1rem;
     border-radius: 10px;
-    padding: 0.4rem;
+    margin: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .input-field input::placeholder {
@@ -207,11 +164,13 @@ form.sign-up-form {
 .panel h3 {
     font-weight: 600;
     line-height: 1;
-    font-size: 1.5rem;
+    font-size: 2.3rem;
+    font-family: "Big Shoulders Stencil Display", cursive;
 }
 .panel p {
-    font-size: 0.95rem;
+    font-size: 1.6rem;
     padding: 0.7rem 0;
+    font-family: "Zen Loop", cursive;
 }
 .btn.transparent {
     margin: 0;
@@ -221,6 +180,7 @@ form.sign-up-form {
     height: 41px;
     font-weight: 600;
     font-size: 0.8rem;
+    font-family: "Text Me One", sans-serif;
 }
 div a {
     text-decoration: none;
